# MobiusPM

./: .gitignore  DESIGN.md  PRODUCT.md  pyproject.toml  requirements.txt
config/: contacts.example.yaml  pm-agent.yaml
deploy/: register_schedule.ps1
docs/: Excel自动跟催Agent_PRD.md  MobiusPM_设计文档.md  deploy.md
docs/handoff/: M1-A.md
docs/issues/: 01_M1-A_工具层基础.md  01_M1-A_脚手架与Excel解析.md  02_M1-B_工具层完成.md  02_M1-B_规则引擎与报告.md  03_M2-A_状态存储与幂等频控.md  03_M2_Agent骨架.md  04_M2-B_Notifier与确认台与发送闭环.md  04_M3_记忆层.md  05_M3_真实CLI适配与定时部署.md  05_M4_周期触发与真实CLI.md  06_M6_趋势_Owner_SponsorBrief.md  README.md
pm_agent/: __init__.py  __main__.py  agent.py  config.py
pm_agent/domain/: item_id.py  status_mapper.py  work_item.py
pm_agent/memory/: loader.py  schema.sql  store.py
pm_agent/prompts/: audit.md  initial_user.md.j2  system.md
pm_agent/tools/: __init__.py  contacts.py  dashboard.py  excel.py  human.py  messages.py  notifier.py  owner_load.py  report.py  rules.py  safety.py  sponsor_brief.py  state.py  trend.py
scripts/: dry_run_pipeline.py  generate_dashboard.py  mvp_test.py  verify_dashboard.py
tests/: conftest.py  test_dashboard.py  test_m1a.py  test_m1b.py  test_m2.py  test_m6.py  test_wake_e2e.py
